--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/contacts
 spring.datasource.username=dev
 spring.datasource.password=123
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
